# media-traffic-ai-analyst

./: .env.example  .gitignore  CLAUDE.md  PLANO_EVOLUCAO.md  PR11_REVIEW.md  README.md  REFATORACAO_ARQUITETURA.md  agents.md  case.md  conftest.py  ending_tasks-v2.md  ending_tasks.md  implementation_plan.md  implementation_plan_hybrid_llm_first.md  langgraph.json  pyproject.toml  skills-lock.json  test_checklist.md
.claude/: settings.json
.claude/hooks/: guard_secrets.py  guard_sql.py  post_edit_ruff.py
.specs/: design.md  parallelization-flows.md  requirements.md  tasks.md  tasks2.md  tasks3.md
_challenge/: INTERVIEW_SIMULATION_CONTEXT.md  INTERVIEW_STUDY_PLAN.md  delivery_evidence.md  perguntas.md  study-guide.html  vaga.md
app/: __init__.py  cli.py  main.py  schema_catalog.py  verify.py
app/agent/: __init__.py  graph.py  messages.py  nodes.py  prompts.py  state.py  studio.py  tools.py
app/api/: __init__.py  deps.py  observability.py  routes.py  schemas.py  sse.py
app/cli/: __init__.py  app.py  rendering.py  sse_client.py
app/clients/: __init__.py  bigquery_client.py
app/core/: __init__.py  dates.py  schema_catalog.py
app/core/analytics/: __init__.py  channel_performance.py  models.py  queries.py  traffic_volume.py
app/core/router/: __init__.py  classifier.py  date_resolution.py
app/graph/: __init__.py  date_normalizer.py  llm.py  llm_router.py  prompts.py  router.py  studio.py  tools.py  workflow.py
app/infra/: __init__.py  bigquery.py  config.py  env.py  llm.py
app/schemas/: __init__.py  api.py  router.py  tools.py
app/tools/: __init__.py  channel_performance_analyzer.py  traffic_volume_analyzer.py
app/utils/: config.py
docs/: gaps-para-nota-10.md  results.md  test-plan.md  test_checklist.md  workflow.md
scripts/: eval_router_langsmith.py  manual_validate_api.py  manual_validate_graph_responses.py  manual_validate_router_dates.py  manual_validate_router_semantics.py  manual_validate_tools.py  run_local_chat.sh  run_readiness_checks.sh  smoke_test_bigquery.py  test.md  tool_binding.py
tests/: conftest.py  deterministic_router.py  fakes.py
tests/eval/: BASELINE.md  router_cases.jsonl  test_router_eval.py
tests/integration/: test_api.py  test_workflow.py
tests/live/: test_live_validation.py
tests/readiness/: test_readiness_suite.py
tests/unit/: test_cli.py  test_contracts.py  test_date_normalizer_integration.py  test_router.py  test_tools.py  test_verify.py
