[project]
name = "media-traffic-ai-analyst"
version = "1.0.0"
description = "MVP de analise de trafego e receita por canal com FastAPI, LangGraph e BigQuery"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Gabriel Fachini" }]
dependencies = [
	"fastapi>=0.115.12,<0.116.0",
	"uvicorn[standard]>=0.34.2,<0.35.0",
	"pydantic>=2.11.3,<3.0.0",
	"pydantic-settings>=2.9.1,<3.0.0",
	"langgraph>=0.4.1,<0.5.0",
	"langchain-anthropic>=1.1.0,<2.0.0",
	"langchain-openai>=1.0.1,<2.0.0",
	"google-cloud-bigquery>=3.31.0,<4.0.0",
	"fastapi-cli>=0.0.24,<0.0.25",
	"httpx>=0.28.1,<0.29.0",
	"rich>=15.0.0,<16.0.0",
	"typer>=0.24.1,<0.25.0",
]

[project.scripts]
analyst-chat = "app.cli:entrypoint"
verify = "app.verify:main"

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
pyright = "^1.1.406"
pytest = "^9.0.3"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"unit: deterministic unit tests for pure business logic and contracts",
	"integration: deterministic integration tests for workflow and API behavior",
	"live: opt-in tests that use real BigQuery and/or LLM providers",
]
addopts = ["--strict-markers", "-ra"]

[tool.pyright]
include = ["app", "scripts", "tests"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
